--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -2,6 +2,9 @@
     margin: auto;
     max-width: 500px;
     font-family: sans-serif;
+    background-color: #00ff6a;
+    text-align: center;
+    padding: 20px;
   }
 
   .heading {
